tests/ui/typeck/conversion/convert_to_super_empty.sol
//@compile-flags: -Ztypeck
contract C {
    function f() public pure {
        super().x; //~ ERROR: expected function, found `contract C`
    }
}
